--- a/index.html
+++ b/index.html
@@ -195,42 +195,42 @@
             <li class="customers-item">
               <a class="customers-link link" href=""
                 ><svg class="customers-icons" width="104" height="56">
-                  <use href="./images/icons.svg#icon-logo"></use>
+                  <use href="./images/icons.svg#icon-Logo"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a class="customers-link link" href=""
                 ><svg class="customers-icons" width="104" height="56">
-                  <use href="./images/icons.svg#icon-logo-1"></use>
+                  <use href="./images/icons.svg#icon-Logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a class="customers-link link" href=""
                 ><svg class="customers-icons" width="104" height="56">
-                  <use href="./images/icons.svg#icon-logo-2"></use>
+                  <use href="./images/icons.svg#icon-Logo-2"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a class="customers-link link" href=""
                 ><svg class="customers-icons" width="104" height="56">
-                  <use href="./images/icons.svg#icon-logo-3"></use>
+                  <use href="./images/icons.svg#icon-Logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a class="customers-link link" href=""
                 ><svg class="customers-icons" width="104" height="56">
-                  <use href="./images/icons.svg#icon-logo-4"></use>
+                  <use href="./images/icons.svg#icon-Logo-4"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a class="customers-link link" href=""
                 ><svg class="customers-icons" width="104" height="56">
-                  <use href="./images/icons.svg#icon-logo-5"></use>
+                  <use href="./images/icons.svg#icon-Logo-5"></use>
                 </svg>
               </a>
             </li>
