--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
         <a class="footer-logo link" href="./index.html"
           >Web<span class="footer-logo-color">Studio</span></a
         >
