--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
           </p>
         </div>
         <div class="footer-paragraf-icons">
-          <p class="footer-text-2">Social media</p>
+          <p class="footer-text-underlogo">Social media</p>
           <ul class="footer-list list">
             <li class="footer-item">
               <a class="footer-social-link link" href=""
