--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
           <h2 class="visually-hidden">peculiarities</h2>
           <ul class="peculiarities-list list">
             <li class="peculiarities-item">
+              <div class="peculiarities-icon-container">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="peculiarities-name">Strategy</h3>
               <p class="peculiarities-text">
                 Our goal is to identify the business problem to walk away with
@@ -79,6 +84,11 @@
               </p>
             </li>
             <li class="peculiarities-item">
+              <div class="peculiarities-icon-container">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="peculiarities-name">Punctuality</h3>
               <p class="peculiarities-text">
                 Bring the key message to the brand's audience for the best price
@@ -86,6 +96,11 @@
               </p>
             </li>
             <li class="peculiarities-item">
+              <div class="peculiarities-icon-container">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="peculiarities-name">Diligence</h3>
               <p class="peculiarities-text">
                 Research and confirm brands that present the strongest digital
@@ -93,6 +108,11 @@
               </p>
             </li>
             <li class="peculiarities-item">
+              <div class="peculiarities-icon-container">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="peculiarities-name">Technologies</h3>
               <p class="peculiarities-text">
                 Design practice focused on digital experiences. We bring forth a
