--- a/index.html
+++ b/index.html
@@ -167,6 +167,36 @@
               <div class="team-item-first">
                 <h3 class="team-names">Mark Guerrero</h3>
                 <p class="team-professions">Product Designer</p>
+                <ul class="team-icons-list list">
+                  <li class="team-icons-item">
+                    <a class="team-social-link link" href=""
+                      ><svg class="team-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-item">
+                    <a class="team-social-link link" href=""
+                      ><svg class="team-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-item">
+                    <a class="team-social-link link" href=""
+                      ><svg class="team-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-item">
+                    <a class="team-social-link link" href=""
+                      ><svg class="team-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -179,6 +209,36 @@
               <div class="team-item-first">
                 <h3 class="team-names">Tom Ford</h3>
                 <p class="team-professions">Frontend Developer</p>
+                <ul class="team-icons-list list">
+                  <li class="team-icons-item">
+                    <a class="team-social-link link" href=""
+                      ><svg class="team-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-item">
+                    <a class="team-social-link link" href=""
+                      ><svg class="team-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-item">
+                    <a class="team-social-link link" href=""
+                      ><svg class="team-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-item">
+                    <a class="team-social-link link" href=""
+                      ><svg class="team-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -191,6 +251,36 @@
               <div class="team-item-first">
                 <h3 class="team-names">Camila Garcia</h3>
                 <p class="team-professions">Marketing</p>
+                <ul class="team-icons-list list">
+                  <li class="team-icons-item">
+                    <a class="team-social-link link" href=""
+                      ><svg class="team-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-item">
+                    <a class="team-social-link link" href=""
+                      ><svg class="team-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-item">
+                    <a class="team-social-link link" href=""
+                      ><svg class="team-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-item">
+                    <a class="team-social-link link" href=""
+                      ><svg class="team-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -203,6 +293,36 @@
               <div class="team-item-first">
                 <h3 class="team-names">Daniel Wilson</h3>
                 <p class="team-professions">UI Designer</p>
+                <ul class="team-icons-list list">
+                  <li class="team-icons-item">
+                    <a class="team-social-link link" href=""
+                      ><svg class="team-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-item">
+                    <a class="team-social-link link" href=""
+                      ><svg class="team-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-item">
+                    <a class="team-social-link link" href=""
+                      ><svg class="team-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-item">
+                    <a class="team-social-link link" href=""
+                      ><svg class="team-icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
