--- a/portfolio.html
+++ b/portfolio.html
@@ -213,13 +213,50 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo link" href="./index.html"
-        >Web<span class="footer-logo-color">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="portfolio-footer">
+        <div class="portfolio-logo-paragraf">
+          <a class="footer-logo link" href="./index.html"
+            >Web<span class="footer-logo-color">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-paragraf-icons">
+          <p class="footer-text-underlogo">Social media</p>
+          <ul class="footer-list list">
+            <li class="footer-item">
+              <a class="footer-social-link link" href=""
+                ><svg class="footer-icons" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-social-link link" href=""
+                ><svg class="footer-icons" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-social-link link" href=""
+                ><svg class="footer-icons" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-social-link link" href=""
+                ><svg class="footer-icons" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
