--- a/portfolio.html
+++ b/portfolio.html
@@ -81,13 +81,20 @@
           </ul>
           <ul class="structure-list list">
             <li class="structure-item">
-              <a class="structure-link link" href=""
-                ><img
-                  src="./images/portfolio_1.jpg"
-                  alt="banking"
-                  width="360"
-                  height="300"
-                />
+              <a class="structure-link link" href="">
+                <div class="structure-picture-section">
+                  <p class="structure-picture-subscribe">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                  <img
+                    src="./images/portfolio_1.jpg"
+                    alt="banking"
+                    width="360"
+                    height="300"
+                  />
+                </div>
                 <div class="structure-item-container">
                   <h2 class="structure-subtitle">
                     Banking App Interface Concept
@@ -98,12 +105,19 @@
             </li>
             <li class="structure-item">
               <a class="structure-link link" href=""
-                ><img
-                  src="./images/portfolio_2.jpg"
-                  alt="payment"
-                  width="360"
-                  height="300"
-                />
+                ><div class="structure-picture-section">
+                  <p class="structure-picture-subscribe">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                  <img
+                    src="./images/portfolio_2.jpg"
+                    alt="payment"
+                    width="360"
+                    height="300"
+                  />
+                </div>
                 <div class="structure-item-container">
                   <h2 class="structure-subtitle">Cashless Payment</h2>
                   <p class="structure-text">Marketing</p>
@@ -112,12 +126,19 @@
             </li>
             <li class="structure-item">
               <a class="structure-link link" href=""
-                ><img
-                  src="./images/portfolio_3.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
+                ><div class="structure-picture-section">
+                  <p class="structure-picture-subscribe">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                  <img
+                    src="./images/portfolio_3.jpg"
+                    alt="Meditation App"
+                    width="360"
+                    height="300"
+                  />
+                </div>
                 <div class="structure-item-container">
                   <h2 class="structure-subtitle">Meditation App</h2>
                   <p class="structure-text">App</p>
@@ -126,12 +147,19 @@
             </li>
             <li class="structure-item">
               <a class="structure-link link" href="">
-                <img
-                  src="./images/portfolio_4.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+                <div class="structure-picture-section">
+                  <p class="structure-picture-subscribe">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                  <img
+                    src="./images/portfolio_4.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                  />
+                </div>
                 <div class="structure-item-container">
                   <h2 class="structure-subtitle">Taxi Service</h2>
                   <p class="structure-text">Marketing</p>
@@ -140,12 +168,19 @@
             </li>
             <li class="structure-item">
               <a class="structure-link link" href="">
-                <img
-                  src="./images/portfolio_5.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <div class="structure-picture-section">
+                  <p class="structure-picture-subscribe">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                  <img
+                    src="./images/portfolio_5.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                </div>
                 <div class="structure-item-container">
                   <h2 class="structure-subtitle">Screen Illustrations</h2>
                   <p class="structure-text">Design</p>
@@ -154,12 +189,19 @@
             </li>
             <li class="structure-item">
               <a class="structure-link link" href="">
-                <img
-                  src="./images/portfolio_6.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <div class="structure-picture-section">
+                  <p class="structure-picture-subscribe">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                  <img
+                    src="./images/portfolio_6.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                  />
+                </div>
                 <div class="structure-item-container">
                   <h2 class="structure-subtitle">Online Courses</h2>
                   <p class="structure-text">Marketing</p>
@@ -168,12 +210,19 @@
             </li>
             <li class="structure-item">
               <a class="structure-link link" href="">
-                <img
-                  src="./images/portfolio_7.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                  height="300"
-                />
+                <div class="structure-picture-section">
+                  <p class="structure-picture-subscribe">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                  <img
+                    src="./images/portfolio_7.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                    height="300"
+                  />
+                </div>
                 <div class="structure-item-container">
                   <h2 class="structure-subtitle">Instagram Stories Concept</h2>
                   <p class="structure-text">Design</p>
@@ -182,12 +231,19 @@
             </li>
             <li class="structure-item">
               <a class="structure-link link" href="">
-                <img
-                  src="./images/portfolio_8.jpg"
-                  alt="Organic Food"
-                  width="360"
-                  height="300"
-                />
+                <div class="structure-picture-section">
+                  <p class="structure-picture-subscribe">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                  <img
+                    src="./images/portfolio_8.jpg"
+                    alt="Organic Food"
+                    width="360"
+                    height="300"
+                  />
+                </div>
                 <div class="structure-item-container">
                   <h2 class="structure-subtitle">Organic Food</h2>
                   <p class="structure-text">Web Site</p>
@@ -196,12 +252,19 @@
             </li>
             <li class="structure-item">
               <a class="structure-link link" href="">
-                <img
-                  src="./images/portfolio_9.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                  height="300"
-                />
+                <div class="structure-picture-section">
+                  <p class="structure-picture-subscribe">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                  <img
+                    src="./images/portfolio_9.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                    height="300"
+                  />
+                </div>
                 <div class="structure-item-container">
                   <h2 class="structure-subtitle">Fresh Coffee</h2>
                   <p class="structure-text">Web Site</p>
@@ -213,7 +276,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="portfolio-footer">
+      <div class="container footer-container">
         <div class="portfolio-logo-paragraf">
           <a class="footer-logo link" href="./index.html"
             >Web<span class="footer-logo-color">Studio</span></a
