--- a/index.html
+++ b/index.html
@@ -424,6 +424,15 @@
         </div>
       </div>
     </footer>
-    <div class="modal-window is-hidden" data-modal></div>
+    <div class="modal-window is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-btn-close" data-modal-close="">
+          <svg class="modal-button-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-VectorX"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
