--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
     </footer>
     <div class="modal-window is-hidden" data-modal>
       <div class="modal">
-        <button type="button" class="modal-btn-close" data-modal-close="">
+        <button type="button" class="modal-btn-close" data-modal-close>
           <svg class="modal-button-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-VectorX"></use>
           </svg>
