--- a/portfolio.html
+++ b/portfolio.html
@@ -12,10 +12,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
-      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -31,7 +28,9 @@
               <a class="header-menu-link link" href="./index.html">Studio</a>
             </li>
             <li class="header-menu-item">
-              <a class="header-menu-link link" href="./portfolio.html"
+              <a
+                class="header-menu-link after-link link"
+                href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
