--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
-      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
     />
+
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -28,7 +26,9 @@
           >
           <ul class="header-menu-list list">
             <li class="header-menu-item">
-              <a class="header-menu-link link" href="./index.html">Studio</a>
+              <a class="header-menu-link after-link link" href="./index.html"
+                >Studio</a
+              >
             </li>
             <li class="header-menu-item">
               <a class="header-menu-link link" href="./portfolio.html"
